--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="event_details">Event details</string>
     <string name="date">Date</string>
     <string name="time">Time</string>
+    <string name="type_a_message">Type a message</string>
 </resources>
