--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="date">Date</string>
     <string name="time">Time</string>
     <string name="type_a_message">Type a message</string>
+    <string name="forgot_password">Forgot password?</string>
 </resources>
