--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="forgot_password">Forgot password?</string>
     <string name="student">Student</string>
     <string name="professor">Professor</string>
+    <string name="select_user">Select User</string>
 </resources>
