--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="select">Select</string>
     <string name="select_a_time">Select A Time</string>
     <string name="select_a_date">Select A Date</string>
+    <string name="join_event">Join Event</string>
 </resources>
