--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="select_a_time">Select A Time</string>
     <string name="select_a_date">Select A Date</string>
     <string name="join_event">Join Event</string>
+    <string name="company">Company</string>
 </resources>
