--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,18 @@
     <string name="select_a_date">Select A Date</string>
     <string name="join_event">Join Event</string>
     <string name="company">Company</string>
+    <string name="select_days">Select Days</string>
+    <string name="register">Register</string>
+    <string name="end_date">End Date</string>
+    <string name="start_date">Start Date</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="start_time">Start Time</string>
+    <string name="scheduling">Scheduling</string>
+    <string name="end_time">End Time</string>
 </resources>
