--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="start_time">Start Time</string>
     <string name="scheduling">Scheduling</string>
     <string name="end_time">End Time</string>
+    <string name="requests">Requests</string>
 </resources>
