--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="scheduling">Scheduling</string>
     <string name="end_time">End Time</string>
     <string name="requests">Requests</string>
+    <string name="friends">Friends</string>
 </resources>
