--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="end_time">End Time</string>
     <string name="requests">Requests</string>
     <string name="friends">Friends</string>
+    <string name="repeats">Repeats</string>
 </resources>
