--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
     <string name="requests">Requests</string>
     <string name="friends">Friends</string>
     <string name="repeats">Repeats</string>
+    <string name="class_information">Class Information</string>
 </resources>
