--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="friends">Friends</string>
     <string name="repeats">Repeats</string>
     <string name="class_information">Class Information</string>
+    <string name="no_classes_added">No classes added</string>
 </resources>
