added new lib dependencies, users now have online status

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="repeats">Repeats</string>
     <string name="class_information">Class Information</string>
     <string name="no_classes_added">No classes added</string>
+    <string name="online">Online</string>
 </resources>
