--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="class_information">Class Information</string>
     <string name="no_classes_added">No classes added</string>
     <string name="online">Online</string>
+    <string name="save_changes">Save Changes</string>
 </resources>
